--- a/projects.html
+++ b/projects.html
@@ -199,12 +199,35 @@
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="footer-info">
-                <h3>UpConstruction</h3>
+                <div
+                  class=""
+                  style="
+                    display: flex;
+                    gap: 1rem;
+                    align-items: center;
+                    margin-bottom: 1.5rem;
+                  "
+                >
+                  <img
+                    src="./assets/img/logoImage.png"
+                    alt=""
+                    width="36px"
+                    height="40px"
+                  />
+                  <img
+                    src="./assets/img/logoText.png"
+                    alt=""
+                    width="137px"
+                    height="40px"
+                  />
+                </div>
                 <p>
-                  A108 Adam Street <br />
-                  NY 535022, USA<br /><br />
-                  <strong>Phone:</strong> +1 5589 55488 55<br />
-                  <strong>Email:</strong> info@example.com<br />
+                  Building No 94, Othman Bin Affan Street 180, <br />
+                  Doha, Qatar, PO Box No:36258
+                  <br /><br />
+                  <strong>Phone:</strong> +974 66908915<br />
+                  <strong>Phone:</strong> +974 30806490<br />
+                  <strong>Email:</strong> info@al-afzahgroup.com<br />
                 </p>
                 <div class="social-links d-flex mt-3">
                   <a
@@ -236,10 +259,10 @@
               <h4>Useful Links</h4>
               <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Terms of service</a></li>
-                <li><a href="#">Privacy policy</a></li>
+                <li><a href="/about.html">About us</a></li>
+                <li><a href="#services">What we offer</a></li>
+                <li><a href="#alt-services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
               </ul>
             </div>
             <!-- End footer links column-->
@@ -247,37 +270,56 @@
             <div class="col-lg-2 col-md-3 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">Web Development</a></li>
-                <li><a href="#">Product Management</a></li>
-                <li><a href="#">Marketing</a></li>
-                <li><a href="#">Graphic Design</a></li>
+                <li>
+                  <a href="service-details.html#deisgn-service-details"
+                    >Deisgn & Engineering</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#electrical-system-details"
+                    >Electrical System</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#fire-system-details"
+                    >Fire Safety</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#communication-safety-details"
+                    >Communication & Security</a
+                  >
+                </li>
               </ul>
             </div>
             <!-- End footer links column-->
 
             <div class="col-lg-2 col-md-3 footer-links">
-              <h4>Hic solutasetp</h4>
+              <h4>Our Services</h4>
               <ul>
-                <li><a href="#">Molestiae accusamus iure</a></li>
-                <li><a href="#">Excepturi dignissimos</a></li>
-                <li><a href="#">Suscipit distinctio</a></li>
-                <li><a href="#">Dilecta</a></li>
-                <li><a href="#">Sit quas consectetur</a></li>
+                <li>
+                  <a href="service-details.html#hvax-system-details"
+                    >HVAC System</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#plumbing-drainage-details"
+                    >Plumbing & Drainage</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#civil-work-details"
+                    >Civil Works</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#cleaning-soft-details"
+                    >Cleaning & Soft Services</a
+                  >
+                </li>
               </ul>
             </div>
             <!-- End footer links column-->
-
-            <div class="col-lg-2 col-md-3 footer-links">
-              <h4>Nobis illum</h4>
-              <ul>
-                <li><a href="#">Ipsam</a></li>
-                <li><a href="#">Laudantium dolorum</a></li>
-                <li><a href="#">Dinera</a></li>
-                <li><a href="#">Trodelas</a></li>
-                <li><a href="#">Flexo</a></li>
-              </ul>
-            </div>
             <!-- End footer links column-->
           </div>
         </div>
@@ -286,17 +328,15 @@
       <div class="footer-legal text-center position-relative">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>UpConstruction</span></strong
+            &copy; Copyright <strong><span>Al-AFZAH GROUP</span></strong
             >. All Rights Reserved
           </div>
           <div class="credits">
+            Developed by <a href="https://www.linkedin.com/in/muhammed-irshad-81985b287/">Muhammed Irshad </a>| Powered by  <a href="https://www.instagram.com/codecave.media.in/">Code Cave Media</a>
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-            Designed by
-            <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed
-            by <a href="https://themewagon.com">ThemeWagon</a>
           </div>
         </div>
       </div>
@@ -322,300 +362,3 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
-<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/remodeling-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>----------------</h4>
-                    <p>UAE Embassy Renovation</p>
-                    <a
-                      href="assets/img/projects/remodeling-1.jpg"
-                      title="Remodeling 1"
-                      data-gallery="portfolio-gallery-remodeling"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-            
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/construction-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>AL-HARMAIN Perfume Warehouse</p>
-                    <a
-                      href="assets/img/projects/construction-1.jpg"
-                      title="Construction 1"
-                      data-gallery="portfolio-gallery-construction"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/repairs-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>KFC - AL-RAYYAN</p>
-                    <a
-                      href="assets/img/projects/repairs-1.jpg"
-                      title="Repairs 1"
-                      data-gallery="portfolio-gallery-repairs"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/design-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>Farm @ WADI AL EWAIRA</p>
-                    <a
-                      href="assets/img/projects/design-1.jpg"
-                      title="Repairs 1"
-                      data-gallery="portfolio-gallery-book"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/remodeling-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>Family laundary @ ABU SIDRA MALL</p>
-                    <a
-                      href="assets/img/projects/remodeling-2.jpg"
-                      title="Remodeling 2"
-                      data-gallery="portfolio-gallery-remodeling"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/construction-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>Colors @ ABU SIDRA MALL</p>
-                    <a
-                      href="assets/img/projects/construction-2.jpg"
-                      title="Construction 2"
-                      data-gallery="portfolio-gallery-construction"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/repairs-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>UAE Embassy Ambassador</p>
-                    <a
-                      href="assets/img/projects/repairs-2.jpg"
-                      title="Repairs 2"
-                      data-gallery="portfolio-gallery-repairs"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/design-2.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>Burger King - WUKAIR</p>
-                    <a
-                      href="assets/img/projects/design-2.jpg"
-                      title="Repairs 2"
-                      data-gallery="portfolio-gallery-book"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/remodeling-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>Tea Stop West Bay</p>
-                    <a
-                      href="assets/img/projects/remodeling-3.jpg"
-                      title="Remodeling 3"
-                      data-gallery="portfolio-gallery-remodeling"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/construction-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>AL KHOR Farm Cable Diversoin</p>
-                    <a
-                      href="assets/img/projects/construction-3.jpg"
-                      title="Construction 3"
-                      data-gallery="portfolio-gallery-construction"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
-                <div class="portfolio-content h-100">
-                  <img
-                    src="assets/img/projects/repairs-3.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="portfolio-info">
-                    <h4>------------------</h4>
-                    <p>Farm Learaig Kharaama Works</p>
-                    <a
-                      href="assets/img/projects/repairs-3.jpg"
-                      title="Repairs 2"
-                      data-gallery="portfolio-gallery-repairs"
-                      class="glightbox preview-link"
-                      ><i class="bi bi-zoom-in"></i
-                    ></a>
-                    <a
-                      href="project-details.html"
-                      title="More Details"
-                      class="details-link"
-                      ><i class="bi bi-link-45deg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>  -->
